adding all unit tests for the api endpoints
